--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -98,7 +98,7 @@
 		<div id="player3-div"></div>
 
 		<div id="footer-div" class="div-center">
-			Copyright 2023 Pairman
+			(C) 2023 Pairman 
 			<a href="https://github.com/Pairman/Xdcheckin">Source Code</a>
 		</div>
 	</body>
