--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -7,8 +7,6 @@
 	<link rel="stylesheet" href="https://g.alicdn.com/apsara-media-box/imp-web-player/2.18.1/skins/default/aliplayer-min.css" />
 	<script type="text/javascript" src="https://g.alicdn.com/apsara-media-box/imp-web-player/2.18.1/aliplayer-min.js"></script>
 	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
-	<script type="text/javascript" src="static/lib/long-press-event/long-press-event.min.js"></script>
-	<script type="text/javascript" src="static/lib/jsqrcode/llqrcode.js"></script>
 	<script type="text/javascript" src="static/classrooms.js"></script>
 	<script type="text/javascript" src="xdcheckin/get/classrooms.js"></script>
 	<script type="text/javascript" src="xdcheckin/get/locations.js"></script>
@@ -62,7 +60,7 @@
 			<button onclick="stop(player0)">Stop</button>
 			<button onclick="unmute(player0)">Unmute</button>
 			<button onclick="mute(player0)">Mute</button>
-			<button id="player0-button-scan" onclick="scan(player0)">Scan (Whole)</button>
+			<button id="player0-button-scan" onclick="chaoxingCheckinQrcode()">Scan</button>
 		</div>
 		<div id="player0-div"></div>
 		<div id="player0-decodeddata-div" style="text-align: center; word-wrap: break-word; width: 400px;"></div>
@@ -219,7 +217,6 @@
 			document.getElementById("player3-buttons-div").style.display = "flex";
 
 			/* Create video players. */
-			scanButtonAddEventListener("player0");
 			player0 = new Aliplayer({
 				id: "player0-div",
 				isLive: true,
@@ -416,7 +413,7 @@
 							button.setAttribute('onclick', 'chaoxing.');
 						type = ((activity["type"] == "2") ? "Qrcode Checkin" : "Location Checkin");
 						button.innerText = type + " (" + activity["name"] + ", " + activity["active_id"] + ", " + activity["time_left"] + ")";
-						button.setAttribute('onclick', 'chaoxingLocationCheckin(' + JSON.stringify({"active_id": activity["active_id"]}) + ')');
+						button.setAttribute('onclick', 'chaoxingCheckinLocation(' + JSON.stringify({"active_id": activity["active_id"]}) + ')');
 						e.appendChild(button);
 					}
 				}
@@ -548,7 +545,7 @@
 				player3.seek(t);
 		}
 
-		/* Qrcode scanning and jump if being valid signin page. */
+		/* Take screenshot of a player. */
 		function screenshot(player) {
 			let video = player.tag;
 			let canvas = document.createElement('canvas');
@@ -563,80 +560,18 @@
 			return img_src;
 		}
 
-		function screenshotRightHalf(player) {
-			let video = player.tag;
-			let canvas = document.createElement('canvas');
-			canvas.width = parseInt(0.56 * video.videoWidth);
-			canvas.height = video.videoHeight;
-			let ctx = canvas.getContext("2d");
-			ctx.save();
-			ctx.drawImage(video, video.videoWidth - canvas.width, 0, canvas.width, canvas.height, 0, 0, canvas.width, canvas.height);
-			let img_src = canvas.toDataURL("image/jpeg", 1.0);
-			ctx.restore();
-			canvas.remove();
-			return img_src;
-		}
-
-		function scan(player) {
-			qrcode.decode(screenshot(player));
-		}
-
-		function scanRightHalf(player) {
-			qrcode.decode(screenshotRightHalf(player));
-		}
-
-		/* Fix wrong encodings introduced by libjsqrcode in URL from Qrcode. */
-		function fixMalformedDecodedData(decodedData) {
-			let map_decodedData = {"%3A": ":", "%3F": "?", "%3D": "=", "%26": "&", "DB_STRATEG%09": "DB_STRATEGY", "DB_STRATEG%19": "DB_STRATEGY", "WTRATEGY_PARA": "STRATEGY_PARA", "@": "B", "%C4": "D", "%B": "", "%C": ""};
-			for (let key in map_decodedData)
-				decodedData = decodedData.replaceAll(key, map_decodedData[key]);
-			return decodedData;
-		}
-		/* Long press event for mode switching of scan button. */
-		function scanButtonAddEventListener (player_var_name, scan_button_id = player_var_name + "-button-scan", long_press_delay = 300) {
-			let b = document.getElementById(scan_button_id);
-			b.setAttribute('data-long-press-delay', long_press_delay);
-			b.addEventListener('long-press', function(e) {
-				if (e.target.getAttribute('data-long-press-status') != 'true') {
-					e.target.setAttribute('data-long-press-status', 'true');
-					e.target.setAttribute('onclick', 'scanRightHalf(' + player_var_name + ')');
-					e.target.innerText = "Scan (Right)";
-				}
-				else {
-					e.target.setAttribute('data-long-press-status', 'false');
-					e.target.setAttribute('onclick', 'scan(' + player_var_name + ')');
-					e.target.innerText = "Scan (Whole)";
-				}
-			});
-		}
-
 		/* Qrcode checkin. */
-		qrcode.callback = async function(decodedData) {
-			document.getElementById("player0-decodeddata-div").innerText = "Scan result:\n" + decodedData;
-			assert(decodedData.indexOf("mobilelearn.chaoxing.com/widget/sign") != -1, "Not a qrcode checkin URL.")
-			try {
-				decodeURIComponent(decodedData);
-			}
-			catch (err) {
-				decodedData = fixMalformedDecodedData(decodedData);
-				document.getElementById("player0-decodeddata-div").innerText = "Scan result (fixed):\n" + decodedData;
-			}
-			try {
-				let params = new URLSearchParams(new URL(decodedData).search);
-				location_["ranged"] = 1;
-				let res = await post("/chaoxing/checkin_checkin_qrcode", data = {"activity": {"active_id": params.get("id"), "enc": params.get("enc")}, "location": location_})
-				if (res.status_code == 200)
-					alert("Checked in successfully.");
-				else
-					document.getElementById("player0-decodeddata-div").innerText = "Checkin failed:\n" + decodedData;
-			}
-			catch (err) {
-				document.getElementById("player0-decodeddata-div").innerText = "Checkin error:\n" + err.message + "\n" + decodedData;
-			}
+		async function chaoxingCheckinQrcode() {
+			let e = document.getElementById("player0-decodeddata-div");
+			e.innerText = "Checking in.";
+			let res = await post("/chaoxing/checkin_checkin_qrcode_img", data = {"img_src": screenshot(player0), "location": location_});
+			e.innerText = res.text || "Checkin failed.\nBackend error.\n"
+			if (res.status_code == 200 && res.text.indexOf("success") != -1)
+				alert("Checked in successfully.");
 		};
 
 		/* Location checkin. */
-		async function chaoxingLocationCheckin(activity) {
+		async function chaoxingCheckinLocation(activity) {
 			location_["ranged"] = 1;
 			let res = await post("/chaoxing/checkin_checkin_location", data = {"activity": activity, "location": location_});
 			if (res.status_code == 200)
