--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -96,7 +96,7 @@
 		<div id="player3-div"></div>
 
 		<div id="footer-div" class="div-center">
-			(C) 2023 Pairman 
+			(C) 2024 Pairman&emsp;
 			<a href="https://github.com/Pairman/Xdcheckin">Source Code</a>
 		</div>
 	</body>
