--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -565,7 +565,7 @@
 			let e = document.getElementById("player0-decodeddata-div");
 			e.innerText = "Checking in.";
 			let res = await post("/chaoxing/checkin_checkin_qrcode_img", data = {"img_src": screenshot(player0), "location": location_});
-			e.innerText = res.text || "Checkin failed.\nBackend error.\n"
+			e.innerText = res.text || "Checkin error:\nBackend error."
 			if (res.status_code == 200 && res.text.indexOf("success") != -1)
 				alert("Checked in successfully.");
 		};
