--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -324,7 +324,7 @@
 
 		/* Div listing toggle. */
 		function listDiv(div_id) {
-			let e = document.getElementById("classrooms-list-div");
+			let e = document.getElementById(div_id);
 			e.style.display = ((e.style.display == "none") ? "block" : "none");
 		}
 
