--- a/src/backend/templates/player.html
+++ b/src/backend/templates/player.html
@@ -604,42 +604,26 @@
 			chaoxingLogin.calling = false;
 		}
 
-		class _res {
-			constructor(status_code, text) {
-				[this.status_code, this.text] = [status_code, text];
-			}
-			json() {
-				try{
-					return JSON.parse(this.text);
-				}
-				catch (err) {
-					return undefined;
-				}
-			}
-		};
-
 		async function get(url = "", params = {}) {
+			let status_code = 404, text = "";
 			try {
-				let status_code = 404, text = "";
 				await $.ajax({
 					cache: true,
 					type: "GET",
 					url: url,
 					data: params,
 					contentType: "text/plain; charset=utf-8"
-				}).done(function(data_, status_text, res){
+				}).done(function (data_, status_text, res){
 					[status_code, text] = [res.status, data_];
 				});
-				return new _res(status_code, text);
 			}
-			catch (err) {
-				return new _res(404, "");
-			}
+			catch (err) {}
+			return {status_code: status_code, text: text, json: function () {try {return JSON.parse(this.text);} catch (err) {return undefined;}}};
 		}
 
 		async function post(url = "", data = {}) {
+			let status_code = 404, text = "";
 			try {
-				let status_code = 404, text = "";
 				await $.ajax({
 					cache: true,
 					type: "POST",
@@ -649,11 +633,9 @@
 				}).done(function(data_, status_text, res){
 					[status_code, text] = [res.status, data_];
 				});
-				return new _res(status_code, text);
 			}
-			catch (err) {
-				return new _res(404, "");
-			}
+			catch (err) {}
+			return {status_code: status_code, text: text, json: function () {try {return JSON.parse(this.text);} catch (err) {return undefined;}}};
 		}
 	</script>
 </html>
